@@ -24,5 +24,5 @@ function applyGlassPlayerSettings()
     form+='COMMAND='+CGI_COMMAND_COMMIT_GLASSPLAYER_CONFIG;
     form+='&RECEIVER_NAME='+Escape(Id('RECEIVER_NAME').value);
     form+='&STREAM_URL='+Escape(Id('STREAM_URL').value);
-    PostForm(form,'/cgi-bin/glassplayerhost.cgi');
+    PostForm(form,'/glassplayerhost.cgi');
 }
