@@ -1,0 +1,30 @@
+// paths.h
+//
+// Install-defined system paths
+//
+// (C) Copyright 2016 Fred Gleason <fredg@paravelsystems.com>
+//
+//   This program is free software; you can redistribute it and/or modify
+//   it under the terms of the GNU General Public License version 2 as
+//   published by the Free Software Foundation.
+//
+//   This program is distributed in the hope that it will be useful,
+//   but WITHOUT ANY WARRANTY; without even the implied warranty of
+//   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+//   GNU General Public License for more details.
+//
+//   You should have received a copy of the GNU General Public
+//   License along with this program; if not, write to the Free Software
+//   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+//
+
+#ifndef PATHS_H
+#define PATHS_H
+
+#include <QString>
+
+#define GLASSPLAYERHOST_SCRIPT_DIR QString("@localstatedir@")
+#define GLASSPLAYERHOST_CGI_DIR QString("@libexecdir@")
+
+
+#endif  // PATHS_H
